added tech and synergy

--- a/investments/index.html
+++ b/investments/index.html
@@ -489,7 +489,7 @@
               <div class="widget-user-header text-white"
                    style="background: url('../dist/img/emertech.png') top left;">
                 <h5 class="widget-user-username text-left">Blockchain Explorer 2.0</h5>
-                <!-- <h6 class="widget-user-desc text-left">Opulent-X Blockchain Explorer Token</h6> -->
+                <h6 class="widget-user-desc text-left">Tech & Biz</h6>
               </div>
               <div class="widget-user-image">
                 <img class="img-circle" src="../dist/img/avatar-technology.png" alt="User Avatar">
@@ -515,7 +515,7 @@
               <div class="widget-user-header text-white"
                    style="background: url('../dist/img/emertech.png') top left;">
                 <h5 class="widget-user-username text-left">Airdrop Station</h5>
-                <!-- <h6 class="widget-user-desc text-left">Technology |SaaS</h6> -->
+                <h6 class="widget-user-desc text-left">Tech & SaaS</h6>
               </div>
               <div class="widget-user-image">
                 <img class="img-circle" src="../dist/img/avatar-technology.png" alt="User Avatar">
@@ -539,8 +539,8 @@
               <!-- Add the bg color to the header using any of the bg-* classes -->
               <div class="widget-user-header text-white"
                    style="background: url('../dist/img/emertech.png') top left;">
-                <h5 class="widget-user-username text-left">Opulent-X Valuation (OPXV)</h5>
-                <h6 class="widget-user-desc text-left">Valuation Token</h6>
+                <h5 class="widget-user-username text-left">Realm Wallet</h5>
+                <h6 class="widget-user-desc text-left">Tech & SaaS</h6>
               </div>
               <div class="widget-user-image">
                 <img class="img-circle" src="../dist/img/avatar-technology.png" alt="User Avatar">
@@ -575,8 +575,8 @@
               <!-- Add the bg color to the header using any of the bg-* classes -->
               <div class="widget-user-header text-white"
                    style="background: url('../dist/img/synergy.jpg') top left;">
-                <h5 class="widget-user-username text-left">Opulent Xynergy (OXYN)</h5>
-                <h6 class="widget-user-desc text-left">Native Gas Token</h6>
+                <h5 class="widget-user-username text-left">Opulent-X Gas Pipeline</h5>
+                <h6 class="widget-user-desc text-left">Infrastructure</h6>
               </div>
               <div class="widget-user-image">
                 <img class="img-circle" src="../dist/img/avatar-synergy.png" alt="User Avatar">
@@ -601,8 +601,8 @@
               <!-- Add the bg color to the header using any of the bg-* classes -->
               <div class="widget-user-header text-white"
                    style="background: url('../dist/img/synergy.jpg') top left;">
-                <h5 class="widget-user-username text-left">Opulent-X Token (OPXT)</h5>
-                <h6 class="widget-user-desc text-left">Utility | Retirement Token</h6>
+                <h5 class="widget-user-username text-left">Gas Station</h5>
+                <h6 class="widget-user-desc text-left">Biz</h6>
               </div>
               <div class="widget-user-image">
                 <img class="img-circle" src="../dist/img/avatar-synergy.png" alt="User Avatar">
@@ -617,8 +617,8 @@
             <div class="card card-widget widget-user shadow">
               <div class="widget-user-header text-white"
                    style="background: url('../dist/img/synergy.jpg') top left;">
-                <h5 class="widget-user-username text-left">Opulent-X Valuation (OPXV)</h5>
-                <h6 class="widget-user-desc text-left">Valuation Token</h6>
+                <h5 class="widget-user-username text-left">Bills Payment 3.0</h5>
+                <h6 class="widget-user-desc text-left">Synergy & Biz</h6>
               </div>
               <div class="widget-user-image">
                 <img class="img-circle" src="../dist/img/avatar-synergy.png" alt="User Avatar">
