--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           </li>
           <li class="nav-item">
             <a href="gas-airdrop.html" class="nav-link">
-              <i class="nav-icon far fa-chart-bar"></i>
+              <i class="fas fa-parachute-box"></i>
               <p>Airdrop Station</p>
             </a>
           </li>
@@ -168,52 +168,13 @@
     <!-- Button trigger modal-->
 
 
-<!-- Modal: modelComingSoonNotice-->
-<div class="modal fade right" id="modalComingSoonNotice" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true" data-backdrop="false">
-  <div class="modal-dialog modal-side modal-bottom-right modal-notify modal-info" role="document">
-    <!--Content-->
-    <div class="modal-content">
-      <!--Header-->
-      <div class="modal-header bg-gradient-primary justify-content-center">
-        <h4 id="feature-name">Available Soon</h4>
 
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true" class="white-text">&times;</span>
-        </button>
-      </div>
-
-      <!--Body-->
-      <div class="modal-body">
-
-        <div class="row">
-          <div class="col-3">
-            <p></p>
-            <p class="text-center"><i class="fas fa-info fa-4x text-primary "></i></p>
-          </div>
-
-          <div class="col-9">
-            <p>Thank you for your interest in this feature. </p>
-            <p>We are wrapping up things and ]excited to present this to you soon.</p>
-          </div>
-        </div>
-      </div>
-
-      <!--Footer-->
-      <div class="modal-footer justify-content-center">
-        
-        <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">Close</a>
-      </div>
-    </div>
-    <!--/.Content-->
-  </div>
-</div>
 <!-- Modal: modalAbandonedCart-->
     <section class="content-header shadow-sm">
       <div class="container-fluid ">
         <div class="row mb-2 ">
           <div class="col-sm-6">
-            <h1>Assets Overview</h1>
+            <h1> <i class="nav-icon fas fa-bullseye"></i> Assets Overview</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
