--- a/overview-roadmap.html
+++ b/overview-roadmap.html
@@ -133,7 +133,7 @@
           </li>
           <li class="nav-item">
             <a href="gas-airdrop.html" class="nav-link">
-              <i class="nav-icon far fa-chart-bar"></i>
+              <i class="fas fa-parachute-box"></i>
               <p>Airdrop Station</p>
             </a>
           </li>
@@ -152,7 +152,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Roadmap</h1>
+            <h1><i class="nav-icon fas fa-road"></i> Roadmap</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
