--- a/gas-station.html
+++ b/gas-station.html
@@ -141,7 +141,7 @@
           <li class="nav-header">GAS PIPELINE</li>
           <li class="nav-item">
             <a href="gas-station.html" class="nav-link active">
-              <i class="nav-icon fas fa-charging-station"></i>
+              <i class="nav-icon fas fa-gas-pump"></i>
               <p>Gas Station</p>
             </a>
           </li>
@@ -174,7 +174,7 @@
       <div class="container-fluid ">
         <div class="row mb-2 ">
           <div class="col-sm-6">
-            <h1><i class="fas fa-charging-station"></i> Gas Stations</h1>
+            <h1> <i class="nav-icon fas fa-gas-pump"></i></i> Gas Stations</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
@@ -197,17 +197,10 @@
         <h6 class="mb-2" style="text-align: center;">We are very excited to serve you. </h6>
        
         <hr>
-
-
-
-
-
-
-
         
       </div>
 
-      </div><!-- /.container-fluid -->
+
     </section>
     <!-- /.content -->
 
@@ -219,9 +212,9 @@
 
   <footer class="main-footer">
     <div class="float-right d-none d-sm-block">
-      <b>Version</b> 3.2.0-rc
+      <b>Version</b> BETA
     </div>
-    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2022 <a href="https://beta.opulent-x.com">Opulent-X Blockchain</a>.</strong> All rights reserved.
   </footer>
 
   <!-- Control Sidebar -->
