--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                   <!-- /.col -->
                 </div>
                 <!-- <a type="button" class="open-ComingSoonDialog btn btn-outline-primary float-right data-toggle="modal" data-target="#modalComingSoonNotice">Check this out</a> -->
-                <a href="./investments/index.html" type="button" class="btn btn-outline-primary float-right">Check this out</a>
+                <a href="./investment-financial.html" type="button" class="btn btn-outline-primary float-right">Check this out</a>
               </div>
             </div>
             
@@ -286,7 +286,7 @@
                 </div>
                 <!-- /.row -->
                 <!-- <button type="button" class="btn btn-block btn-primary">Learn More | Invest</button> -->
-                <a type="button" class="open-ComingSoonDialog btn btn-outline-primary float-right data-toggle="modal" data-target="#modalComingSoonNotice">Check this out</a>
+                <a href="./investment-technology.html" type="button" class="btn btn-outline-primary float-right">Check this out</a>
               </div>
             </div>
             <!-- /.widget-user -->
@@ -304,7 +304,7 @@
                 <img class="img-circle" src="./dist/img/avatar-synergy.png" alt="User Avatar">
               </div>
               <div class="card-footer" style="background-color: whitesmoke;">
-                <a type="button" class="open-ComingSoonDialog btn btn-outline-primary float-right data-toggle="modal" data-target="#modalComingSoonNotice">Check this out</a>
+                <a href="./investment-synergy.html" type="button" class="btn btn-outline-primary float-right">Check this out</a>
                 <!-- /.row -->
                 <!-- <button type="button" class="btn btn-block btn-primary">Learn More | Invest</button> -->
               </div>
@@ -422,7 +422,6 @@
         
       </div>
 
-      </div><!-- /.container-fluid -->
     </section>
     <!-- /.content -->
 
@@ -434,9 +433,9 @@
 
   <footer class="main-footer">
     <div class="float-right d-none d-sm-block">
-      <b>Version</b> 3.2.0-rc
+      <b>Version</b> BETA
     </div>
-    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2022 <a href="https://beta.opulent-x.com">Opulent-X Blockchain</a>.</strong> All rights reserved.
   </footer>
 
   <!-- Control Sidebar -->
