gas pipeline infra roadmap

--- a/roadmap-startup.html
+++ b/roadmap-startup.html
@@ -152,12 +152,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1><i class="nav-icon fas fa-road"></i> Roadmap</h1>
+            <h1><i class="nav-icon fas fa-road"></i> Roadmap: Genesis Infra</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="overview-roadmap.html">Home</a></li>
-              <li class="breadcrumb-item active">Timeline</li>
+              <li class="breadcrumb-item"><a href="overview-roadmap.html">Roadmap</a></li>
+              <li class="breadcrumb-item active">Genesis Infra</li>
             </ol>
           </div>
         </div>
@@ -186,7 +186,7 @@
                 <i class="fas fa-check bg-blue"></i>
                 <div class="timeline-item">
                   <span class="time"><i class="fas fa-clock"></i>   +20,000.00 USD</span>
-                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | <a href="#">Opulent-X Platform </a>Deployed </h3>
+                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | <a href="roadmap-genesis.html">Opulent-X Platform </a>Deployed </h3>
 
                   <div class="timeline-body">
                     We have successfully commission our blockchain nodes (client and miners), published <a href="">Blockchain Explorer</a>, and <a href=""> Realm Websites</a>
@@ -205,7 +205,7 @@
                 <i class="fas fa-clock bg-green"></i>
                 <div class="timeline-item">
                   <span class="time"><i class="fas fa-clock"></i>  +300,000.00 USD</span>
-                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Ramp-up <a href="roadmap-gas-pipeline.html">Opulent-X Gas  Pipeline</a> Infrastructure </h3>
+                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Ramp-up <a href="roadmap-pipeline.html">Opulent-X Gas  Pipeline</a> Infrastructure </h3>
                   <div class="timeline-body">
                     This infrastructure will streamline the distribution of Gas,  from Secure Reserve Facilities to Gas Stations and Airdrop Points. <hr>
                     <small>This demonstrates our advanced blockchain engineering capabilities. Showcasing our exceptional innovativeness in designing our infrastructure. </small>
@@ -219,7 +219,7 @@
                 <i class="fas fa-clock bg-gray"></i>
                 <div class="timeline-item">
                   <span class="time"><i class="fas fa-clock"></i> +1,500,000.00 USD</span>
-                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Launch <a href="#">Opulent-X Kickstarter </a>Ecosystem | Infrasture</h3>
+                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Launch <a href="roadmap-kickstart.html">Opulent-X Kickstarter </a>Ecosystem | Infrasture</h3>
                   
                   <div class="timeline-footer">
                     This infrastruture will facilitates the deployment and operation of relevant platforms that would kickstart the economic activities in this realm.
@@ -238,7 +238,7 @@
                 <i class="fa fa-clock bg-gray"></i>
                 <div class="timeline-item">
                   <span class="time"><i class="fas fa-clock"></i> +10,000,000.00 USD</span>
-                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Launch <a href="#">Opulent-X Economic Boaster </a>  Infrastructure </h3>
+                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Launch <a href="roadmap-eco-boaster.html">Opulent-X Economic Boaster </a>  Infrastructure </h3>
                   <div class="timeline-body">
                     This infrastructure would boast the economic activities of this realm. Thus, making our blockchain realm economy more robust, thing  
                     that would attract more  players (users, innovators, entrepreneurs and investors). This set of platforms will be deployed strategically.
@@ -256,7 +256,7 @@
                 <i class="fa fa-clock bg-gray"></i>
                 <div class="timeline-item">
                   <span class="time"><i class="fas fa-clock"></i> +15,000,000.00 USD</span>
-                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Launch <a href="#">Opulent-X Sustainability </a>Ecosystem </h3>
+                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Launch <a href="roadmap-sustainability.html">Opulent-X Sustainability </a>Ecosystem </h3>
                   <div class="timeline-body">
                     This infrastructure roll-out would help sustain the rubostness of this realm economy and activities. 
                   </div>
@@ -273,7 +273,7 @@
                 <i class="fa fa-clock bg-gray"></i>
                 <div class="timeline-item">
                   <span class="time"><i class="fas fa-clock"></i> +50,000,000.00 USD</span>
-                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Launch <a href="#">Opulent-X InterChain </a>Infrastructure </h3>
+                  <h3 class="timeline-header"><i class="fas fa-clock"></i> April 2022 | Launch <a href="raodmap-interchain.html">Opulent-X InterChain </a>Infrastructure </h3>
                   <div class="timeline-body">
                     This infrastructure would seamlessly open up (interoperate) our realm to mainnet and layer 2 blockchain networks. 
                    This set of platforms would simply bridge the secure and flawless management and flows of interchain assets.
