--- a/overview-roadmap.html
+++ b/overview-roadmap.html
@@ -197,7 +197,7 @@
               <!-- END timeline item -->
               <!-- timeline time label -->
               <div class="time-label">
-                <span class="bg-green">2022 - Q3 | Dong Period</span>
+                <span class="bg-green">Dong Period | 2022 - Q3</span>
               </div>
               <!-- /.timeline-label -->
               <!-- timeline item -->
@@ -229,7 +229,7 @@
               <!-- END timeline item -->
               <!-- timeline time label -->
               <div class="time-label">
-                <span class="bg-gray">2022 - Q3 | Won Period</span>
+                <span class="bg-gray">Won Economy | 2022 - Q3</span>
               </div>
               <!-- /.timeline-label -->
               <!-- timeline item -->
@@ -247,7 +247,7 @@
               <!-- END timeline item -->
               <!-- timeline time label -->
               <div class="time-label">
-                <span class="bg-gray">2022 - Q3 | Yen Period</span>
+                <span class="bg-gray">Yen Economy | 2022 - Q3</span>
               </div>
               <!-- /.timeline-label -->
                <!-- timeline item -->
@@ -264,7 +264,7 @@
               <!-- END timeline item -->
                 <!-- timeline time label -->
                 <div class="time-label">
-                  <span class="bg-gray">2022 - Q3 | Eco Peso</span>
+                  <span class="bg-gray">Peso Economy | 2022 - Q3</span>
                 </div>
                 <!-- /.timeline-label -->
                <!-- timeline item -->
